--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
                     <img src="./images/mark.jpg" alt="Mark Guerrero avatar" width="264" height="260">
                     <div class="container-team">
                     <h3 class="h-three-name">Mark Guerrero</h3>
-                    <p class="p-job">Product Designer</p>
-                    <div> 
+                    <p class="p-job">Product Designer</p> 
                         <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
@@ -105,14 +104,12 @@
                             </a>
                         </li>
                     </ul>
-                   </div>
                     </div>
                 <li class="main-item">
                     <img src="./images/tom.jpg" alt="Tom Ford avatar" width="264" height="260">
                     <div class="container-team">
                     <h3 class="h-three-name">Tom Ford</h3>
                     <p class="p-job">Frontend Developer</p>
-                    <div> 
                         <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
@@ -143,7 +140,6 @@
                             </a>
                         </li>
                     </ul>
-                   </div>
                     </div>
                 </li>
                 <li class="main-item">
@@ -151,7 +147,6 @@
                     <div class="container-team">
                     <h3 class="h-three-name">Camila Garcia</h3>
                     <p class="p-job">Marketing</p>
-                    <div> 
                         <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
@@ -182,7 +177,6 @@
                             </a>
                         </li>
                     </ul>
-                   </div>
                     </div>
                 </li>
                 <li class="main-item">
@@ -190,7 +184,6 @@
                     <div class="container-team">
                     <h3 class="h-three-name">Daniel Wilson</h3>
                     <p class="p-job">UI Designer</p>
-                    <div>
                          <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
@@ -222,7 +215,6 @@
                         </li>
                         </ul>
                     </div>
-                    </div>
             </ul>
         </div>
         </section>
@@ -241,7 +233,6 @@
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <a href="#" class="link-portfolio">
                     <div class="container-img">
                     <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">     
                     <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -298,37 +289,38 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
+            <div class="div-footer">
         <a class="logo  footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
-        <div class="footer-div">
+        <div>
             <p class="footer-h-p">Social media</p>
             <ul class="icon-list-footer">
                 <li class="itme-icon">
-                    <a href="#" class="icon-link-footer">
-                        <svg width="40" height="40" class="portfolio-icon">
-                            <use class="icon-img" href="./images/icons.svg#instagram"></use>
+                    <a href="" class="icon-link-footer">
+                        <svg width="24" height="24" class="portfolio-icon">
+                            <use href="./images/icons.svg#instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
                     <a href="" class="icon-link-footer">
-                        <svg width="40" height="40" class="portfolio-icon">
-                            <use class="icon-img" href="./images/icons.svg#twitter"></use>
+                        <svg width="24" height="24" class="portfolio-icon">
+                            <use href="./images/icons.svg#twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
                     <a href="" class="icon-link-footer">
-                        <svg width="40" height="40" class="portfolio-icon">
-                            <use class="icon-img" href="./images/icons.svg#facebook"></use>
+                        <svg width="24" height="24" class="portfolio-icon">
+                            <use href="./images/icons.svg#facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
                     <a href="" class="icon-link-footer">
-                        <svg width="40" height="40" class="portfolio-icon">
-                            <use class="icon-img" href="./images/icons.svg#linkedin"></use>
+                        <svg width="24" height="24" class="portfolio-icon">
+                            <use href="./images/icons.svg#linkedin"></use>
                         </svg>
                     </a>
                 </li>
