--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h3 class="h-three-name">Mark Guerrero</h3>
                     <p class="p-job">Product Designer</p> 
                         <ul class="icon-list">
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#instagram"></use>
@@ -93,14 +93,14 @@
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#linkedin"></use>
@@ -115,28 +115,28 @@
                     <h3 class="h-three-name">Tom Ford</h3>
                     <p class="p-job">Frontend Developer</p>
                         <ul class="icon-list">
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#linkedin"></use>
@@ -152,28 +152,28 @@
                     <h3 class="h-three-name">Camila Garcia</h3>
                     <p class="p-job">Marketing</p>
                         <ul class="icon-list">
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#linkedin"></use>
@@ -196,21 +196,21 @@
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#linkedin"></use>
@@ -301,28 +301,28 @@
         <div>
             <p class="footer-h-p">Social media</p>
             <ul class="icon-list-footer">
-                <li class="itme-icon">
+                <li class="item-icon">
                     <a href="" class="icon-link-footer">
                         <svg width="24" height="24" class="portfolio-icon">
                             <use href="./images/icons.svg#instagram"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="itme-icon">
+                <li class="item-icon">
                     <a href="" class="icon-link-footer">
                         <svg width="24" height="24" class="portfolio-icon">
                             <use href="./images/icons.svg#twitter"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="itme-icon">
+                <li class="item-icon">
                     <a href="" class="icon-link-footer">
                         <svg width="24" height="24" class="portfolio-icon">
                             <use href="./images/icons.svg#facebook"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="itme-icon">
+                <li class="item-icon">
                     <a href="" class="icon-link-footer">
                         <svg width="24" height="24" class="portfolio-icon">
                             <use href="./images/icons.svg#linkedin"></use>
