--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <h3 class="h-three-name">Daniel Wilson</h3>
                     <p class="p-job">UI Designer</p>
                          <ul class="icon-list">
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#instagram"></use>
@@ -232,7 +232,7 @@
                     <img src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300">
                     <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>  
-                    <div>
+                    <div class="container-portfolio">
                     <h3 class="section-two-together">Banking App</h3>
                     <p class="h-three-p">App</p>
                     </div>
@@ -242,7 +242,7 @@
                     <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">     
                     <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>  
-                    <div>
+                    <div class="container-portfolio">
                     <h3 class="section-two-together">Cashless Payment</h3>
                     <p class="h-three-p">Marketing</p>
                     </div>
